force-app/main/default/objects/Offer__c/fields/Buyers__c.field-meta.xml
<CustomField>
    <fullName>Buyers__c</fullName>
    <description>Created by Rollup Helper</description>
    <label>Buyers</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>