force-app/main/default/objects/Offer__c/fields/Buyers_Suppliers_included_in_offer__c.field-meta.xml
<CustomField>
    <fullName>Buyers_Suppliers_included_in_offer__c</fullName>
    <label>Buyers / Suppliers included in offer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>