force-app/main/default/objects/Offer__c/fields/Earliest_First_Invoice_Commitment__c.field-meta.xml
<CustomField>
    <fullName>Earliest_First_Invoice_Commitment__c</fullName>
    <label>Earliest First Invoice Commitment</label>
    <type>Date</type>
</CustomField>