force-app/main/default/objects/Offer__c/fields/Incomlend_Invoice_ref__c.field-meta.xml
<CustomField>
    <fullName>Incomlend_Invoice_ref__c</fullName>
    <label>Incomlend Invoice ref</label>
    <length>100</length>
    <type>Text</type>
</CustomField>