force-app/main/default/objects/Offer__c/fields/invoice_amount__c.field-meta.xml
<CustomField>
    <fullName>invoice_amount__c</fullName>
    <label>invoice amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>