force-app/main/default/objects/Offer__c/fields/Offer_conditions__c.field-meta.xml
<CustomField>
    <fullName>Offer_conditions__c</fullName>
    <label>Offer conditions</label>
    <type>TextArea</type>
</CustomField>