force-app/main/default/objects/Offer__c/fields/offer_conditions_met__c.field-meta.xml
<CustomField>
    <fullName>offer_conditions_met__c</fullName>
    <defaultValue>false</defaultValue>
    <label>offer conditions met</label>
    <type>Checkbox</type>
</CustomField>