force-app/main/default/objects/Offer__c/fields/Offer_is_conditional__c.field-meta.xml
<CustomField>
    <fullName>Offer_is_conditional__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Offer is conditional</label>
    <type>Checkbox</type>
</CustomField>