force-app/main/default/objects/Offer__c/fields/Offer_Sent__c.field-meta.xml
<CustomField>
    <fullName>Offer_Sent__c</fullName>
    <label>Offer Sent</label>
    <type>Date</type>
</CustomField>