force-app/main/default/objects/Offer__c/fields/Prepared_Date__c.field-meta.xml
<CustomField>
    <fullName>Prepared_Date__c</fullName>
    <label>Prepared Date</label>
    <type>DateTime</type>
</CustomField>