force-app/main/default/objects/Offer__c/fields/process_changes_details__c.field-meta.xml
<CustomField>
    <fullName>process_changes_details__c</fullName>
    <label>process changes details</label>
    <type>TextArea</type>
</CustomField>