force-app/main/default/objects/Offer__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reverse Factoring</fullName>
            </value>
            <value>
                <fullName>Supplier Driven</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>