force-app/main/default/objects/Offer__c/fields/requires_funding_step_change__c.field-meta.xml
<CustomField>
    <fullName>requires_funding_step_change__c</fullName>
    <defaultValue>false</defaultValue>
    <label>requires funding step change</label>
    <type>Checkbox</type>
</CustomField>