force-app/main/default/objects/Offer__c/fields/requires_process_changes__c.field-meta.xml
<CustomField>
    <fullName>requires_process_changes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>requires process changes</label>
    <type>Checkbox</type>
</CustomField>