force-app/main/default/objects/Offer__c/fields/requires_processing_volume_step_change__c.field-meta.xml
<CustomField>
    <fullName>requires_processing_volume_step_change__c</fullName>
    <defaultValue>false</defaultValue>
    <label>requires processing volume step change</label>
    <type>Checkbox</type>
</CustomField>