force-app/main/default/objects/Offer__c/fields/signed_by_customer__c.field-meta.xml
<CustomField>
    <fullName>signed_by_customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>signed by customer</label>
    <type>Checkbox</type>
</CustomField>