force-app/main/default/objects/Offer__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10.Draft</fullName>
            </value>
            <value>
                <fullName>20.Internal Approvals</fullName>
            </value>
            <value>
                <fullName>30.Waiting for Customer</fullName>
            </value>
            <value>
                <fullName>40.Accepted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>