force-app/main/default/objects/Offer__c/fields/Total_Credit_Insurance_USD_Equiv__c.field-meta.xml
<CustomField>
    <fullName>Total_Credit_Insurance_USD_Equiv__c</fullName>
    <label>Total Credit Insurance USD Equiv</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>