force-app/main/default/objects/Offer__c/fields/Total_Max_Funding_Demand__c.field-meta.xml
<CustomField>
    <fullName>Total_Max_Funding_Demand__c</fullName>
    <label>Total Max Funding Demand USD Equiv</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>