force-app/main/default/objects/Offer__c/fields/Total_Monthly_Invoice_Count__c.field-meta.xml
<CustomField>
    <fullName>Total_Monthly_Invoice_Count__c</fullName>
    <label>Total Monthly Invoice Count</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>