force-app/main/default/objects/Offer__c/fields/Total_Monthly_Invoice_Value_USD_Equiv__c.field-meta.xml
<CustomField>
    <fullName>Total_Monthly_Invoice_Value_USD_Equiv__c</fullName>
    <label>Total Monthly Invoice Value USD Equiv</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>