force-app/main/default/objects/Offer__c/fields/XSL_Offer_ID__c.field-meta.xml
<CustomField>
    <fullName>XSL_Offer_ID__c</fullName>
    <externalId>true</externalId>
    <label>XSL Offer ID</label>
    <length>200</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>