force-app/main/default/objects/Offer__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Product__c</columns>
    <columns>Status__c</columns>
    <columns>Customer__c</columns>
    <columns>Prepared_Date__c</columns>
    <columns>Offer_Sent__c</columns>
    <columns>signed_by_customer__c</columns>
    <columns>Incomlend_Invoice_ref__c</columns>
    <columns>Invoice_Sent_Date__c</columns>
    <columns>Invoice_Paid_Date__c</columns>
    <columns>Buyers__c</columns>
    <columns>Invoice_CCY__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>