force-app/main/default/objects/Offer__c/listViews/Sales_Team_Z3_Offer.listView-meta.xml
<ListView>
    <fullName>Sales_Team_Z3_Offer</fullName>
    <filterScope>Queue</filterScope>
    <label>Sales Team Z3</label>
    <queue>Sales_Team_Z3</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>