force-app/main/default/objects/Offer__c/listViews/Sales_Team_Zone_2_Offer.listView-meta.xml
<ListView>
    <fullName>Sales_Team_Zone_2_Offer</fullName>
    <filterScope>Queue</filterScope>
    <label>Sales Team Z2</label>
    <queue>Sales_Team_Z2</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>